[package]
name = "adbyss"
version = "0.1.0"
license = "WTFPL"
authors = ["Josh Stoik <josh@blobfolio.com>"]
edition = "2018"
description = "Adbyss is a DNS blacklist manager for Linux."
publish = false

[package.metadata.deb]
maintainer = "Josh Stoik <hello@blobfolio.com>"
copyright = "2020, Blobfolio, LLC <hello@blobfolio.com>"
license-file = ["../LICENSE", "0"]
revision = "1"
depends = "$auto"
section = "utility"
assets = [
    ["../target/x86_64-unknown-linux-gnu/release/adbyss", "usr/bin/", "755"],
    ["./misc/adbyss.1.gz", "usr/share/man/man1/", "644"],
]

[dependencies]
rayon = "*"
tempfile-fast = "0.3.3"

[dependencies.adbyss_core]
path = "../adbyss_core"

[dependencies.fyi_menu]
git = "https://github.com/Blobfolio/fyi.git"
branch = "master"

[dependencies.fyi_msg]
git = "https://github.com/Blobfolio/fyi.git"
branch = "master"

[features]
default = []
man = []
