[package]
name = "adbyss"
version = "0.1.4"
license = "WTFPL"
authors = ["Josh Stoik <josh@blobfolio.com>"]
edition = "2018"
description = "Adbyss is a DNS blacklist manager for Linux."
publish = false
build = "build.rs"

[package.metadata.deb]
maintainer = "Josh Stoik <hello@blobfolio.com>"
copyright = "2020, Blobfolio, LLC <hello@blobfolio.com>"
license-file = ["../LICENSE", "0"]
revision = "1"
depends = "$auto"
section = "utility"
assets = [
    ["../target/x86_64-unknown-linux-gnu/release/adbyss", "usr/bin/", "755"],
    ["./misc/adbyss.yaml", "etc/", "644"],
    ["./misc/adbyss.bash", "etc/bash_completion.d/", "644"],
    ["./misc/adbyss.1.gz", "usr/share/man/man1/", "644"],
]
conf-files = [
	"/etc/adbyss.yaml",
]

[build-dependencies.fyi_menu]
git = "https://github.com/Blobfolio/fyi.git"
branch = "master"

[dependencies]
serde_yaml = "0.8.*"
sudo = "0.5.*"

[dependencies.serde]
version = "1.0.*"
features = [ "derive" ]

[dependencies.adbyss_core]
path = "../adbyss_core"

[dependencies.fyi_msg]
git = "https://github.com/Blobfolio/fyi.git"
branch = "master"

[dependencies.fyi_menu]
git = "https://github.com/Blobfolio/fyi.git"
branch = "master"

[features]
default = []
man = []
