[package]
name = "adbyss"
version = "0.6.0"
license = "WTFPL"
authors = ["Josh Stoik <josh@blobfolio.com>"]
edition = "2021"
rust-version = "1.56"
description = "Adbyss is a DNS blacklist manager for Linux."
repository = "https://github.com/Blobfolio/adbyss"
publish = false

[package.metadata.deb]
maintainer = "Josh Stoik <hello@blobfolio.com>"
copyright = "2021, Blobfolio, LLC <hello@blobfolio.com>"
license-file = ["../LICENSE", "0"]
revision = "1"
depends = "$auto"
section = "utility"
assets = [
    ["../target/x86_64-unknown-linux-gnu/release/adbyss", "usr/bin/", "755"],
    ["./skel/adbyss.yaml", "etc/", "644"],
    ["../release/completions/adbyss.bash", "etc/bash_completion.d/", "644"],
    ["../release/man/adbyss.1.gz", "usr/share/man/man1/", "644"],
]
conf-files = [
	"/etc/adbyss.yaml",
]

[package.metadata.bashman]
name = "Adbyss"
bash-dir = "../release/completions"
man-dir = "../release/man"
credits-dir = "../"

[[package.metadata.bashman.switches]]
long = "--disable"
description = "Remove *all* Adbyss entries from the hostfile."

[[package.metadata.bashman.switches]]
short = "-h"
long = "--help"
description = "Print help information."

[[package.metadata.bashman.switches]]
short = "-q"
long = "--quiet"
description = "Suppress the success message after updating the hostfile."

[[package.metadata.bashman.switches]]
long = "--show"
description = "Print a sorted blackholable hosts list to STDOUT, one per line."

[[package.metadata.bashman.switches]]
long = "--stdout"
description = "Print the would-be hostfile to STDOUT instead of writing it to disk."

[[package.metadata.bashman.switches]]
short = "-V"
long = "--version"
description = "Print program version."

[[package.metadata.bashman.switches]]
short = "-y"
long = "--yes"
description = 'Non-interactive mode; answer "yes" to all prompts.'

[[package.metadata.bashman.options]]
short = "-c"
long = "--config"
label = "<FILE>"
description = "Use this configuration instead of /etc/adbyss.yaml."
path = true

[[package.metadata.bashman.sections]]
name = "GLOBAL"
inside = true
lines = [ "Additional settings are stored in /etc/adbyss.yaml. Edit those to set your preferred global runtime behaviors." ]

[[package.metadata.bashman.sections]]
name = "SOURCE LISTS"
inside = true
items = [
	["AdAway", "<https://adaway.org/>"],
	["Steven Black", "<https://github.com/StevenBlack/hosts>"],
	["Yoyo", "<https://pgl.yoyo.org/adservers/>"]
]

[dependencies]
argyle = "0.5.*"
dactyl = "0.2.*"
fyi_msg = "0.9.*"
libc = "0.2.*"
serde_yaml = "0.8.*, >=0.8.4"

[dependencies.adbyss_core]
path = "../adbyss_core"

[dependencies.serde]
version = "1.0.*"
features = [ "derive" ]
