[package]
name = "adbyss_core"
version = "0.9.4"
license = "WTFPL"
authors = ["Josh Stoik <josh@blobfolio.com>"]
edition = "2021"
rust-version = "1.73"
description = "Library for Adbyss."
repository = "https://github.com/Blobfolio/adbyss"
publish = false

[dependencies]
argyle = "0.7.*"
dactyl = "0.7.*"
fyi_msg = "0.12.*"
rayon = "1.8.*"
regex = "1.10.*"
utc2k = "0.8.*"
write_atomic = "0.5.*"

[dependencies.ahash]
version = "0.8.*"
default-features = false

[dependencies.minreq]
version = "2.11.*"
default-features = false
features = ["https"]

[dependencies.adbyss_psl]
path = "../adbyss_psl"
