[package]
name = "adbyss_core"
version = "0.12.0"
license = "WTFPL"
authors = ["Josh Stoik <josh@blobfolio.com>"]
edition = "2021"
rust-version = "1.80"
description = "Library for Adbyss."
repository = "https://github.com/Blobfolio/adbyss"
publish = false

[dependencies]
argyle = "0.7.*"
dactyl = "0.7.*"
fyi_msg = "0.13.*"
rayon = "1.10.*"
regex = "1.10.*"
utc2k = "0.9.*"
write_atomic = "0.5.*"

[dependencies.ahash]
version = "0.8.*"
default-features = false

[dependencies.minreq]
version = "2.12.*"
default-features = false
features = ["https"]

[dependencies.adbyss_psl]
path = "../adbyss_psl"
