[package]
name = "adbyss_core"
version = "0.13.0"
license = "WTFPL"
authors = ["Josh Stoik <josh@blobfolio.com>"]
edition = "2021"
description = "Library for Adbyss."
repository = "https://github.com/Blobfolio/adbyss"
publish = false

[dependencies]
argyle = "0.8.*"
dactyl = "0.7.*"
fyi_msg = "1.1.*"
rayon = "1.10.*"
regex = "1.11.*"
utc2k = "0.10.*"
write_atomic = "0.5.*"

[dependencies.ahash]
version = "0.8.*"
default-features = false

[dependencies.minreq]
version = "2.12.*"
default-features = false
features = ["https"]

[dependencies.adbyss_psl]
path = "../adbyss_psl"
