[package]
name = "adbyss_psl"
version = "0.9.2"
license = "WTFPL"
authors = ["Josh Stoik <josh@blobfolio.com>"]
edition = "2021"
rust-version = "1.65"
description = "A minimal Public Suffix List hostname validator."
repository = "https://github.com/Blobfolio/adbyss"
keywords = [ "hostname", "validation", "publicsuffix", "idna", "punycode" ]
readme = "README.md"

[package.metadata.docs.rs]
rustc-args = ["--cfg", "docsrs"]
rustdoc-args = ["--cfg", "docsrs"]
features = [ "serde" ]
default-target = "x86_64-unknown-linux-gnu"
targets = [ "x86_64-unknown-linux-gnu", "x86_64-apple-darwin" ]

[build-dependencies]
idna = "0.5.0"
regex = "1.7.0"
serde_json = "1.0.100"

[build-dependencies.ahash]
version = "0.8.*"
default-features = false

[dev-dependencies]
brunch = "0.5.*"
serde = "1.0.*"
serde_json = "1.0.*"

[dependencies]
unicode-bidi = "0.3.*"
unicode-normalization = "0.1.*"

[dependencies.ahash]
version = "0.8.*"
default-features = false

[dependencies.serde]
version = "1.0.*"
default-features = false
optional = true

[features]
default = []

# Expose (de)/serialize support for adbyss_psl::Domain.
serde = [ "dep:serde" ]

[[bench]]
name = "psl_parse"
harness = false
