[package]
name = "adbyss_psl"
version = "0.19.0"
license = "WTFPL"
authors = ["Josh Stoik <josh@blobfolio.com>"]
edition = "2024"
rust-version = "1.88"
description = "A minimal Public Suffix List hostname validator."
repository = "https://github.com/Blobfolio/adbyss"
keywords = [ "hostname", "validation", "publicsuffix", "idna", "punycode" ]
readme = "README.md"

[package.metadata.docs.rs]
rustc-args = ["--cfg", "docsrs"]
rustdoc-args = ["--cfg", "docsrs"]
features = [ "serde" ]
default-target = "x86_64-unknown-linux-gnu"
targets = [ "x86_64-unknown-linux-gnu", "x86_64-apple-darwin" ]

[build-dependencies]
idna = "1.0.0"
serde_json = "1.0.100"

[dev-dependencies]
brunch = "0.11.*"
serde = "1.0.*"
serde_json = "1.0.*"

[dependencies]
idna = "1.0.0"
trimothy = "0.9.*"

[dependencies.serde]
version = "1.0.*"
default-features = false
optional = true

[features]
default = []

# Expose (de)/serialize support for adbyss_psl::Domain.
serde = [ "dep:serde" ]

[[bench]]
name = "psl_parse"
harness = false

[[bench]]
name = "psl_email"
harness = false
